# web-agent

./: .env.example  .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: build-assets.yml  generate-requirements.yml
android/app/: build.gradle
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  alias.py  calendar_visibility.py  config.py  google.py  main.py  models.py  persistent_reminder_store.py  reminder_serialization.py  reminders.py  scheduling.py  sessions.py  state.py  tools.py  utils.py
backend/scripts/: create_frontend_tarball.py  generate_requirements.py  run.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/public/favicon/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  registerServiceWorker.ts  types.ts
frontend/src/components/: CalendarSelector.tsx  ChatKitPanel.tsx  InfoCard.tsx  LoginForm.tsx  NavBar.tsx  RealtimePanel.tsx  Sidebar.tsx  VoiceToggleButton.tsx
frontend/src/hooks/: useVoiceMode.ts  useVoicePlayback.ts
frontend/src/lib/: api.ts  auth.ts  carReminders.ts  chatkitSession.ts  config.ts  realtimeConnection.ts  realtimeInstructions.ts  realtimeTools.ts
frontend/src/pages/: ChatPage.tsx  SettingsPage.tsx
ios/App/: Podfile
ios/App/App/: CarDetectionPlugin.m  (+2 more)
ios/App/App.xcodeproj/: project.pbxproj
old-app/: AGENTS.md
old-app/docs/: AGENT_WORKFLOW.md  SHARED_CALENDARS.md
old-app/routes/: web.php
scripts/: print-tools.js
(+22 files in other folders)
